...
    "description": "City name, Kohtla-Järve, shown in 1) settings 2) at home screen app bar 3) at introduction screen in dropdown list."
  },
  "kuressaare": "Kuressaare",
  "@kuressaare": {
    "description": "City name, Kuressaare, shown in 1) settings 2) at home screen app bar 3) at introduction screen in dropdown list."
  },
  "narva": "Narva",
  "@narva": {
    "description": "City name, Narva, shown in 1) settings 2) at home screen app bar 3) at introduction screen in dropdown list."
  },
  "parnu": "Pärnu",
  "@parnu": {
    "description": "City name, Pärnu, shown in 1) settings 2) at home screen app bar 3) at introduction screen in dropdown list."
...
    "description": "Text used on intro page as header for third screen."
  },
  "introThirdScreenBody": "Never miss a bus again. Check the local bus stops for upcoming schedules and arrivals when no immediate transportation is nearby.",
  "@introThirdScreenBody": {
    "description": "Text used on intro page as body for third screen."
  },
  "introFourthScreenHeader": "Customize to Your Liking",
  "@introFourthScreenHeader": {
    "description": "Text used on intro page as header for fourth screen."
  },
  "introFourthScreenBody": "Choose your preferred city, switch between light or dark theme, and select your language. Personalize your experience with our easily accessible settings.",
  "@introFourthScreenBody": {
    "description": "Text used on intro page as body for fourth screen."
...
