...
          ),
        ),
        const SizedBox(
          height: 40,
        ),
        DropdownButton<String>(
          key: const Key('intro_dropdown_button'),
          menuMaxHeight: MediaQuery.of(context).size.height * 0.3,
          value: context.select((MapBloc bloc) => bloc.state.pickedCity.name),
          icon: const Icon(Icons.arrow_downward),
          elevation: 16,
          style: const TextStyle(color: Colors.deepPurple),
          underline: Container(
...
