...
      },
      builder: (context, state) {
        return Card(
          color: context.select((ThemeBloc bloc) => bloc.isDarkMode)
              ? null
              : Theme.of(context).secondaryHeaderColor,
          child: ExpansionTile(key: const Key('show_trips_for_today_dropdown'),subtitle: Text(AppLocalizations.of(context)!.changeFilter),
            title:
                context.read<MapBloc>().state.globalShowTripsForToday == GlobalShowTripsForToday.all
                    ? Text(AppLocalizations.of(context)!.settingsGlobalFilterAll)
                    : Text(AppLocalizations.of(context)!.settingsGlobalFilterToday),
            children: <Widget>[
              Builder(
...
                  );
                },
              ),
              Builder(
                builder: (context) {
                  return ListTile(
                    key: const Key('show_trips_for_today_dropdown_today'),
                    title: generateDropdownMenuItem(
                      GlobalShowTripsForToday.today,
                      AppLocalizations.of(context)!.settingsGlobalFilterToday,
                    ),
                    onTap: () {
                      context.read<MapBloc>().add(
...
