...
              builder: (context) => const OnboardingWidget(),
            ),
            (Route<dynamic> route) => false,
          );
        },
        done:
            Text(key: const Key('intro_done_button'), AppLocalizations.of(context)!.doneButtonText),
        dotsFlex: 2,
        dotsContainerDecorator: context.select((ThemeBloc bloc) => bloc.isDarkMode == true)
            ? const BoxDecoration(color: Color(0xFF141514))
            : BoxDecoration(
                gradient: LinearGradient(
                  colors: [
...
