...
                : AppStyleConstants.appBarColor,
            centerTitle: true,
            title: Focus(focusNode: appBarTitleFocusNode, child: const AppBarTitle()),
            elevation: 2,
            actions: [
              IconButton(
                key: const Key('settings_icon_button'),
                focusNode: settingsIconFocusNode,
                tooltip: AppLocalizations.of(context)!.homeAppBarSettingsIcon,
                onPressed: () {
                  final mapBloc = BlocProvider.of<MapBloc>(context);
                  Navigator.of(context).push(
                    MaterialPageRoute<void>(
...
